# top-utils

./: .gitignore  LICENSE  README.md  build_libs.sh  pixi.toml
libs/top_purdue_data/: README.md  pyproject.toml
libs/top_purdue_data/src/top_purdue_data/: __init__.py  physics.py  purdue.py  selections.py
libs/top_purdue_physics/: README.md  pyproject.toml
libs/top_purdue_physics/src/top_purdue_physics/: __init__.py  masses.py  spincorr.py
libs/top_purdue_plotting/: README.md  pyproject.toml  run_tests.sh
libs/top_purdue_plotting/src/top_purdue_plotting/: __init__.py  colorschemes.py  histograms.py  labels.py  metrics.py
libs/top_purdue_plotting/tests/: test_histogram_plotting.py  test_metrics_plotting.py
