[project]
name = "top-purdue-physics"
version = "0.1.0"
description = "A small library for computing physics quantities for the Purdue top group."
readme = "README.md"
authors = [
    { name = "EthanColbert8", email = "emcolbert2@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "awkward>=2.7",
    "vector>=1.6",
]

[build-system]
requires = ["uv_build>=0.10"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-exclude = [".ipynb_checkpoints"]
