[project]
name = "top-purdue-plotting"
dynamic = ["version"]
description = "A small library of plotting routines for the Purdue top group."
readme = "README.md"
authors = [
    { name = "EthanColbert8", email = "emcolbert2@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "awkward>=2.7",
    "vector>=1.6",
    "hist>=2.9",
    "matplotlib>=3.9",
    "mplhep>=1.1",
]

[build-system]
requires = ["hatchling>=1.30"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/top_purdue_plotting/__init__.py"

[tool.hatch.build.targets]
sdist.exclude = [".ipynb_checkpoints"]
wheel.exclude = [".ipynb_checkpoints"]
